--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ repositories {
 }
 
 dependencies {
+    compile group: 'junit', name: 'junit', version: '4.12'
     // compile group: 'edu.cmu.sphinx', name: 'sphinx4-core', version:'5prealpha-SNAPSHOT'
     // compile group: 'edu.cmu.sphinx', name: 'sphinx4-data', version:'5prealpha-SNAPSHOT'
     compile group: 'org.apache.opennlp', name: 'opennlp-tools'          , version: '1.6.0'
