--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ dependencies {
     // compile group: 'edu.cmu.sphinx', name: 'sphinx4-data', version:'5prealpha-SNAPSHOT'
     compile group: 'org.apache.opennlp', name: 'opennlp-tools'          , version: '1.6.0'
     compile group: 'org.apache.commons', name: 'commons-lang3'          , version: '3.4'
+    compile group: 'org.apache.commons', name: 'commons-collections4'   , version: '4.1'
     // compile group: 'org.apache.lucene' , name: 'lucene-core'            , version: '5.5.0'
     // compile group: 'org.apache.lucene' , name: 'lucene-queryparser'     , version: '5.5.0'
     // compile group: 'org.apache.lucene' , name: 'lucene-analyzers-common', version: '5.5.0'
