--- a/build.gradle
+++ b/build.gradle
@@ -1,19 +1,8 @@
-apply plugin: 'java'
-
-repositories {
-    mavenLocal()
-    mavenCentral()
-    maven { url "https://oss.sonatype.org/content/repositories/snapshots" }
-}
-
-dependencies {
-    compile group: 'junit', name: 'junit', version: '4.12'
-    // compile group: 'edu.cmu.sphinx', name: 'sphinx4-core', version:'5prealpha-SNAPSHOT'
-    // compile group: 'edu.cmu.sphinx', name: 'sphinx4-data', version:'5prealpha-SNAPSHOT'
-    compile group: 'org.apache.opennlp', name: 'opennlp-tools'          , version: '1.6.0'
-    compile group: 'org.apache.commons', name: 'commons-lang3'          , version: '3.4'
-    compile group: 'org.apache.commons', name: 'commons-collections4'   , version: '4.1'
-    // compile group: 'org.apache.lucene' , name: 'lucene-core'            , version: '5.5.0'
-    // compile group: 'org.apache.lucene' , name: 'lucene-queryparser'     , version: '5.5.0'
-    // compile group: 'org.apache.lucene' , name: 'lucene-analyzers-common', version: '5.5.0'
+subprojects() {
+    apply plugin: 'java'
+    
+    repositories() {
+         mavenLocal()
+         mavenCentral()
+    }
 }
