--- a/quality/metrics/build.gradle
+++ b/quality/metrics/build.gradle
@@ -21,6 +21,7 @@ dependencies {
     compile project(':sphinx4-core')
     compile project(':sphinx4-data')
 
+    compile group: 'junit'               , name: 'junit'               , version: '4.12'
     compile group: 'org.apache.commons'  , name: 'commons-collections4', version: '4.1'
     compile group: 'com.google.code.gson', name: 'gson'                , version: '2.6.2'
 }
