Rename metrics module to pasr

--- a/quality/settings.gradle
+++ b/quality/settings.gradle
@@ -1,4 +1,4 @@
-include 'metrics', 'core', 'sphinx4-core', 'sphinx4-data'
+include 'pasr', 'core', 'sphinx4-core', 'sphinx4-data'
 
 project(':core').projectDir = new File("../core")
 project(':sphinx4-core').projectDir = new File("../sphinx4/sphinx4-core")
