--- a/core/build.gradle
+++ b/core/build.gradle
@@ -23,13 +23,11 @@ dependencies {
     compile project(':sphinx4-core')
     compile project(':sphinx4-data')
 
-    compile group: 'junit', name: 'junit', version: '4.12'
-    compile group: 'org.apache.opennlp', name: 'opennlp-tools',        version: '1.6.0'
-    compile group: 'org.apache.commons', name: 'commons-lang3',        version: '3.4'
-    compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.1'
-    compile group: 'javax.mail',         name: 'mail',                 version: '1.5.0-b01'
-    // compile group: 'org.apache.lucene' , name: 'lucene-core'            , version: '5.5.0'
-    // compile group: 'org.apache.lucene' , name: 'lucene-queryparser'     , version: '5.5.0'
-    // compile group: 'org.apache.lucene' , name: 'lucene-analyzers-common', version: '5.5.0'
-    compile group: 'com.github.gouzouni625', name: 'native-utils', version: '-SNAPSHOT'
+    compile group: 'junit'                 , name: 'junit'               , version: '4.12'
+    compile group: 'org.apache.opennlp'    , name: 'opennlp-tools'       , version: '1.6.0'
+    compile group: 'org.apache.commons'    , name: 'commons-lang3'       , version: '3.4'
+    compile group: 'org.apache.commons'    , name: 'commons-collections4', version: '4.1'
+    compile group: 'javax.mail'            , name: 'mail'                , version: '1.5.0-b01'
+    compile group: 'com.google.code.gson'  , name: 'gson'                , version: '2.6.2'
+    compile group: 'com.github.gouzouni625', name: 'native-utils'        , version: '-SNAPSHOT'
 }
