Remove sphinx4 submodule

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,1 @@
-include 'core', 'sphinx4-core', 'sphinx4-data'
-
-project(':sphinx4-core').projectDir = new File("sphinx4/sphinx4-core")
-project(':sphinx4-data').projectDir = new File("sphinx4/sphinx4-data")
+include 'core', 'quality'
