--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ subprojects() {
     apply plugin: 'java'
 
     repositories() {
-         mavenCentral()
+        mavenCentral()
+        maven { url "https://jitpack.io" }
     }
 }
