--- a/quality/build.gradle
+++ b/quality/build.gradle
@@ -1,7 +1,5 @@
-subprojects() {
-    apply plugin: 'java'
+dependencies {
+    compile project(':core')
 
-    repositories() {
-         mavenCentral()
-    }
+    compile group: 'com.google.code.gson', name: 'gson', version: '2.6.2'
 }
