--- a/quality/build.gradle
+++ b/quality/build.gradle
@@ -2,4 +2,5 @@ dependencies {
     compile project(':core')
 
     compile group: 'com.google.code.gson', name: 'gson', version: '2.6.2'
+    compile group: 'commons-io'          , name: 'commons-io', version: '2.5'
 }
