Refactor email list scene

--- a/core/src/main/resources/logging/logging.properties
+++ b/core/src/main/resources/logging/logging.properties
@@ -26,7 +26,7 @@ handlers = java.util.logging.FileHandler, java.util.logging.ConsoleHandler
 # can be overridden by a facility specific level
 # Note that the ConsoleHandler also has a separate level
 # setting to limit messages printed to the console.
-.level = INFO
+.level = ALL
 
 ############################################################
 # Handler specific properties.
@@ -38,6 +38,8 @@ java.util.logging.FileHandler.pattern = application%u.log
 java.util.logging.FileHandler.limit = 50000
 java.util.logging.FileHandler.count = 1
 java.util.logging.FileHandler.formatter = org.pasr.utilities.logging.PrettyFormatter
+
+java.util.logging.ConsoleHandler.level= INFO
 
 ############################################################
 # Facility specific properties.
