Add exception handling in newCorpusEntry

--- a/core/src/main/resources/database/default_configuration.json
+++ b/core/src/main/resources/database/default_configuration.json
@@ -1,4 +1,6 @@
 {
+  "dataBaseDirectoryPath": "database/",
+
   "corpusDirectoryPath": "database/corpora/",
   "corpusIndexPath": "database/corpora/index.json",
 
