--- a/core/src/main/resources/logging/logging.properties
+++ b/core/src/main/resources/logging/logging.properties
@@ -26,7 +26,7 @@ handlers = java.util.logging.FileHandler, java.util.logging.ConsoleHandler
 # can be overridden by a facility specific level
 # Note that the ConsoleHandler also has a separate level
 # setting to limit messages printed to the console.
-.level = ALL
+.level = INFO
 
 ############################################################
 # Handler specific properties.
@@ -34,12 +34,12 @@ handlers = java.util.logging.FileHandler, java.util.logging.ConsoleHandler
 ############################################################
 
 # default file output is in user's home directory.
-java.util.logging.FileHandler.pattern = application%u.log
+java.util.logging.FileHandler.pattern = application.log
 java.util.logging.FileHandler.limit = 50000
-java.util.logging.FileHandler.count = 1
+java.util.logging.FileHandler.count = 10
 java.util.logging.FileHandler.formatter = org.pasr.utilities.logging.PrettyFormatter
 
-java.util.logging.ConsoleHandler.level= INFO
+java.util.logging.ConsoleHandler.level= WARNING
 
 ############################################################
 # Facility specific properties.
