--- a/core/build.gradle
+++ b/core/build.gradle
@@ -22,4 +22,5 @@ dependencies {
     compile group: 'com.google.code.gson'  , name: 'gson'                , version: '2.6.2'
     compile group: 'com.github.gouzouni625', name: 'native-utils'        , version: '-SNAPSHOT'
     compile group: 'cc.mallet'             , name: 'mallet'              , version: '2.0.8'
+    compile group: 'org.apache.opennlp'    , name: 'opennlp-tools'       , version: '1.6.0'
 }
