--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,12 @@
 [submodule "sphinxbase"]
 	path = sphinxbase
 	url = https://github.com/gouzouni625/sphinxbase.git
+        ignore = dirty
 [submodule "sphinxtrain"]
 	path = sphinxtrain
 	url = https://github.com/gouzouni625/sphinxtrain.git
+        ignore = dirty
 [submodule "pocketsphinx"]
 	path = pocketsphinx
 	url = https://github.com/gouzouni625/pocketsphinx.git
+        ignore = dirty
