Deal with internet connection lost during fetching
Change javax.mail version to 1.4.7 since 1.5.0-b01 seems to be a beta
version.

Close any folder which is left open when GMailFetcher terminates.

Change the gmail imaps properties to the correct values.Concretely:
Calling, getStore("imap") will only use the mail.imap.* properties.
Calling, getStore("imaps") will only use the mail.imaps.* properties.
This means that there are two possible properties sets:

mail.imaps.host=imap.gmail.com
mail.imaps.timeout=1000

and

mail.imap.host=imap.gmail.com
mail.imap.timeout=1000
mail.imap.socketFactory.port=993
mail.imap.socketFactory.class=javax.net.ssl.SSLSocketFactory

The first set should use getStore("imaps") and the second
getStore("imap").

It is obvious that, "imaps" will set the port to be 993 and the
SSLSocketFactory to be used.

--- a/build.gradle
+++ b/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     compile group: 'org.apache.commons'    , name: 'commons-lang3'       , version: '3.4'
     compile group: 'org.apache.commons'    , name: 'commons-collections4', version: '4.1'
     compile group: 'commons-io'            , name: 'commons-io'          , version: '2.5'
-    compile group: 'javax.mail'            , name: 'mail'                , version: '1.5.0-b01'
+    compile group: 'javax.mail'            , name: 'mail'                , version: '1.4.7'
     compile group: 'com.google.code.gson'  , name: 'gson'                , version: '2.6.2'
     compile group: 'com.github.gouzouni625', name: 'native-utils'        , version: '-SNAPSHOT'
     compile group: 'cc.mallet'             , name: 'mallet'              , version: '2.0.8'
